--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -9,6 +9,7 @@
     <link  href="www/xterm/xterm.css" rel="stylesheet" />
     <script src="www/xterm/xterm.js"></script>
     <script src="www/xterm-addon-fit/xterm-addon-fit.js"></script>
+    <script src="www/xterm-addon-unicode11/xterm-addon-unicode11.js"></script>
     <!--
       <link  href="https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/xterm/xterm.css" rel="stylesheet" />
       <script src="https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/xterm/xterm.js"></script>
@@ -88,10 +89,16 @@
 
     <script type="text/javascript">
       /* xterm.js demo */
+      /* https://www.npmjs.com/package/xterm-addon-fit */
       const fitAddon = new FitAddon.FitAddon();
+      /* https://www.npmjs.com/package/xterm-addon-unicode11 */
+      const unicode11Addon = new Unicode11Addon.Unicode11Addon();
 
-      var term = new Terminal();
+      var term = new Terminal({allowProposedApi: true});
       term.loadAddon(fitAddon);
+      term.loadAddon(unicode11Addon);
+
+      term.unicode.activeVersion = '11';
 
       term.open(document.getElementById('terminal'));
 
