--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -144,8 +144,12 @@
             return [term.cols, term.rows]
           },
           setTimeout: function(t, i) {
-            // console.log("TIME",i,t)
-            setTimeout(() => ttk_timer(i), t)
+            // console.log("TIME (Start)",i,t)
+            return setTimeout(() => ttk_timer(i), t)
+          },
+          stopTimeout: function(t) {
+            // console.log("TIME (Stop)",t)
+            clearTimeout(t)
           },
           clearTimeout: function(){
             let highestTimeoutId = setTimeout(";");
@@ -178,80 +182,6 @@
         pyodide.unpackArchive(zipBinary, ".tar.gz");
 
         term.write('Tutorials - Loaded\n\r')
-
-        term.write('Starting Demo...\n\r')
-
-        namespace = pyodide.globals.get("dict")();
-        pyodide.runPython(`
-            import sys
-            import TermTk as ttk
-            import pyodideProxy
-
-            def ttk_input(val):
-              if ttk.TTkHelper._rootWidget and ttk.TTkHelper._rootWidget._input:
-                ttk.TTkHelper._rootWidget._input.key_process(val)
-
-            def ttk_resize(w,h):
-              ttk.TTkLog.debug(f"Resize: {w=} {h=}")
-              if ttk.TTkHelper._rootWidget:
-                ttk.TTkHelper._rootWidget._win_resize_cb(w,h)
-                ttk.TTkHelper.rePaintAll()
-              # TODO: I need to get rid of this:
-              ttk.TTkTerm.push(ttk.TTkTerm.ALT_SCREEN + ttk.TTkTerm.CLEAR + ttk.TTkTerm.Cursor.HIDE + ttk.TTkTerm.escTitle(ttk.TTkTerm.title))
-              ttk.TTkTerm.push(ttk.TTkTerm.Mouse.ON)
-
-            def ttk_timer(tid):
-              ttk.TTkTimer.triggerTimerId(tid)
-
-            def ttk_log(val):
-              # hex = [f"0x{ord(x):02x}" for x in val]
-              ttk.TTkLog.debug("---> "+val.replace("\\033","<ESC>") + " - ")
-              ttk.TTkHelper.paintAll()
-
-            def ttk_clean():
-              if ttk.TTkHelper._rootWidget:
-                ttk.TTkTimer.pyodideQuit()
-                ttk.TTkHelper._rootWidget.quit()
-                ttk.TTkHelper._focusWidget = None
-                ttk.TTkHelper._rootCanvas = None
-                ttk.TTkHelper._rootWidget = None
-                ttk.TTkHelper._updateBuffer = []
-                ttk.TTkHelper._updateWidget = []
-                ttk.TTkHelper._overlay = []
-                ttk.TTkHelper._shortcut = []
-                ttk.TTkLog._messageHandler = [message_handler]
-
-            def message_handler(mode, context, message):
-                msgType = "DEBUG"
-                if mode == ttk.TTkLog.InfoMsg:       msgType = "[INFO]"
-                elif mode == ttk.TTkLog.WarningMsg:  msgType = "[WARNING]"
-                elif mode == ttk.TTkLog.CriticalMsg: msgType = "[CRITICAL]"
-                elif mode == ttk.TTkLog.FatalMsg:    msgType = "[FATAL]"
-                elif mode == ttk.TTkLog.ErrorMsg:    msgType = "[ERROR]"
-                pyodideProxy.consoleLog(f"{msgType} {context.file} {message}")
-            # Register the callback to the message handler
-            ttk.TTkLog.installMessageHandler(message_handler)
-        `,{ globals: namespace }
-        );
-
-        let ttk_log    = namespace.get("ttk_log");
-        let ttk_input  = namespace.get("ttk_input");
-        let ttk_timer  = namespace.get("ttk_timer");
-        let ttk_resize = namespace.get("ttk_resize");
-        let ttk_clean  = namespace.get("ttk_clean");
-
-        term.onResize( (obj) => {
-          term.reset()
-          ttk_resize(obj.cols, obj.rows)
-        });
-        term.onData((d, evt) => { ttk_input(d) })
-
-        pyodide.runPython(`
-        import sys,os
-        sys.path.append(os.path.join(sys.path[0],'demo'))
-        __name__ = "__main__"
-        `,{ globals: namespace }
-        );
 
         /* Sidebar
           Fetch all the files in the pyodide.FS
@@ -306,6 +236,83 @@
         //loadFile("/home/pyodide/tutorial/calculator/calculator.005.py")
         w2ui.sidebar.select(pyodide.FS.currentPath+"/demo/demo.py")
 
+        term.write('Starting Demo...\n\r')
+
+        namespace = pyodide.globals.get("dict")();
+        pyodide.runPython(`
+            import sys
+            import TermTk as ttk
+            import pyodideProxy
+
+            def ttk_input(val):
+              if ttk.TTkHelper._rootWidget and ttk.TTkHelper._rootWidget._input:
+                ttk.TTkHelper._rootWidget._input.key_process(val)
+
+            def ttk_resize(w,h):
+              ttk.TTkLog.debug(f"Resize: {w=} {h=}")
+              if ttk.TTkHelper._rootWidget:
+                ttk.TTkHelper._rootWidget._win_resize_cb(w,h)
+                ttk.TTkHelper.rePaintAll()
+              ttk.TTkTerm.cont()
+
+            def ttk_timer(tid):
+              ttk.TTkTimer.triggerTimerId(tid)
+
+            def ttk_log(val):
+              # hex = [f"0x{ord(x):02x}" for x in val]
+              ttk.TTkLog.debug("---> "+val.replace("\\033","<ESC>") + " - ")
+              ttk.TTkHelper.paintAll()
+
+            def ttk_clean():
+              if ttk.TTkHelper._rootWidget:
+                ttk.TTkTimer.pyodideQuit()
+                ttk.TTkHelper._rootWidget.quit()
+                ttk.TTkHelper._focusWidget = None
+                ttk.TTkHelper._rootCanvas = None
+                ttk.TTkHelper._rootWidget = None
+                ttk.TTkHelper._updateBuffer = []
+                ttk.TTkHelper._updateWidget = []
+                ttk.TTkHelper._overlay = []
+                ttk.TTkHelper._shortcut = []
+                ttk.TTkLog._messageHandler = [message_handler]
+
+            def ttk_init():
+              ttk.TTkToolTip.toolTipTimer = ttk.TTkTimer()
+              ttk.TTkToolTip.toolTipTimer.timeout.connect(ttk.TTkToolTip._toolTipShow)
+
+            def message_handler(mode, context, message):
+                msgType = "DEBUG"
+                if mode == ttk.TTkLog.InfoMsg:       msgType = "[INFO]"
+                elif mode == ttk.TTkLog.WarningMsg:  msgType = "[WARNING]"
+                elif mode == ttk.TTkLog.CriticalMsg: msgType = "[CRITICAL]"
+                elif mode == ttk.TTkLog.FatalMsg:    msgType = "[FATAL]"
+                elif mode == ttk.TTkLog.ErrorMsg:    msgType = "[ERROR]"
+                pyodideProxy.consoleLog(f"{msgType} {context.file} {message}")
+            # Register the callback to the message handler
+            ttk.TTkLog.installMessageHandler(message_handler)
+        `,{ globals: namespace }
+        );
+
+        let ttk_log    = namespace.get("ttk_log");
+        let ttk_input  = namespace.get("ttk_input");
+        let ttk_timer  = namespace.get("ttk_timer");
+        let ttk_resize = namespace.get("ttk_resize");
+        let ttk_clean  = namespace.get("ttk_clean");
+        let ttk_init   = namespace.get("ttk_init");
+
+        term.onResize( (obj) => {
+          term.reset()
+          ttk_resize(obj.cols, obj.rows)
+        });
+        term.onData((d, evt) => { ttk_input(d) })
+
+        pyodide.runPython(`
+        import sys,os
+        sys.path.append(os.path.join(sys.path[0],'demo'))
+        __name__ = "__main__"
+        `,{ globals: namespace }
+        );
+
         run = function(){
           ttk_clean()
           console.log("Run App")
@@ -317,22 +324,16 @@
             __file__='`+filename+`'
             os.chdir('`+pwd+`')`,{ globals: namespace })
 
+          ttk_init()
+
           let content = getCode()
           pyodide.runPython(content,{ globals: namespace });
 
-          // TODO: I need to get rid of this:
-          pyodide.runPython(`
-            # TODO: I need to get rid of this:
-            ttk.TTkTerm.push(ttk.TTkTerm.ALT_SCREEN + ttk.TTkTerm.CLEAR + ttk.TTkTerm.Cursor.HIDE + ttk.TTkTerm.escTitle(ttk.TTkTerm.title))
-            ttk.TTkTerm.push(ttk.TTkTerm.Mouse.ON)
-            `,{ globals: namespace }
-          );
           ttk_log(filename + " - LOADED")
         };
         run()
       }
       main()
-      console.log(pyodide)
     </script>
 
   </body>
