--- a/_modules/TermTk/TTkLayouts/layout.html
+++ b/_modules/TermTk/TTkLayouts/layout.html
@@ -112,7 +112,7 @@
 <span class="c1"># SOFTWARE.</span>
 
 <span class="sd">&#39;&#39;&#39;</span>
-<span class="sd">**Layout** [`Tutorial &lt;https://ceccopierangiolieugenio.github.io/pyTermTk/tutorial/002-layout.html#simple-ttklayout&gt;`_]</span>
+<span class="sd">**Layout** [`Tutorial &lt;https://ceccopierangiolieugenio.github.io/pyTermTk/tutorial/002-layout.html#simple-ttklayout&gt;`__]</span>
 <span class="sd">&#39;&#39;&#39;</span>
 
 <span class="kn">from</span> <span class="nn">TermTk.TTkCore.constant</span> <span class="kn">import</span> <span class="n">TTkK</span>
