--- a/_modules/TermTk/TTkCore/helper.html
+++ b/_modules/TermTk/TTkCore/helper.html
@@ -505,7 +505,7 @@
                 <span class="k">if</span> <span class="n">w</span> <span class="o">==</span> <span class="n">widget</span><span class="p">:</span>
                     <span class="n">widget</span><span class="o">=</span><span class="kc">None</span>
                 <span class="k">continue</span>
-            <span class="k">if</span> <span class="n">w</span><span class="o">.</span><span class="n">focusPolicy</span><span class="p">()</span> <span class="o">&amp;</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">TabFocus</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">TabFocus</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">w</span><span class="o">.</span><span class="n">isEnabled</span><span class="p">()</span> <span class="ow">and</span> <span class="n">w</span><span class="o">.</span><span class="n">focusPolicy</span><span class="p">()</span> <span class="o">&amp;</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">TabFocus</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">TabFocus</span><span class="p">:</span>
                 <span class="n">w</span><span class="o">.</span><span class="n">setFocus</span><span class="p">()</span>
                 <span class="n">w</span><span class="o">.</span><span class="n">update</span><span class="p">()</span>
                 <span class="k">return</span>
@@ -527,7 +527,7 @@
                 <span class="n">widget</span><span class="o">=</span><span class="kc">None</span>
                 <span class="k">if</span> <span class="n">prev</span><span class="p">:</span>
                     <span class="k">break</span>
-            <span class="k">if</span> <span class="n">w</span><span class="o">.</span><span class="n">focusPolicy</span><span class="p">()</span> <span class="o">&amp;</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">TabFocus</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">TabFocus</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">w</span><span class="o">.</span><span class="n">isEnabled</span><span class="p">()</span> <span class="ow">and</span> <span class="n">w</span><span class="o">.</span><span class="n">focusPolicy</span><span class="p">()</span> <span class="o">&amp;</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">TabFocus</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">TabFocus</span><span class="p">:</span>
                 <span class="n">prev</span> <span class="o">=</span> <span class="n">w</span>
         <span class="k">if</span> <span class="n">prev</span><span class="p">:</span>
             <span class="n">prev</span><span class="o">.</span><span class="n">setFocus</span><span class="p">()</span>
