--- a/_modules/TermTk/TTkWidgets/lineedit.html
+++ b/_modules/TermTk/TTkWidgets/lineedit.html
@@ -276,7 +276,7 @@
     <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">_isFloat</span><span class="p">(</span><span class="n">num</span><span class="p">):</span>
         <span class="k">try</span><span class="p">:</span>
-            <span class="nb">float</span><span class="p">(</span><span class="n">num</span><span class="p">)</span>
+            <span class="nb">float</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">num</span><span class="p">))</span>
             <span class="k">return</span> <span class="kc">True</span>
         <span class="k">except</span><span class="p">:</span>
             <span class="k">return</span> <span class="kc">False</span>
@@ -311,12 +311,12 @@
 <div class="viewcode-block" id="TTkLineEdit.keyEvent"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkWidgets.lineedit.html#TermTk.TTkWidgets.lineedit.TTkLineEdit.keyEvent">[docs]</a>    <span class="k">def</span> <span class="nf">keyEvent</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">evt</span><span class="p">):</span>
         <span class="n">baseText</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_text</span>
         <span class="k">if</span> <span class="n">evt</span><span class="o">.</span><span class="n">type</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">SpecialKey</span><span class="p">:</span>
-            <span class="c1"># Don&#39;t Handle the special tab key</span>
-            <span class="k">if</span> <span class="n">evt</span><span class="o">.</span><span class="n">key</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">Key_Tab</span><span class="p">:</span>
+            <span class="c1"># Don&#39;t Handle the special focus switch key</span>
+            <span class="k">if</span> <span class="n">evt</span><span class="o">.</span><span class="n">key</span> <span class="ow">in</span> <span class="p">(</span>
+                <span class="n">TTkK</span><span class="o">.</span><span class="n">Key_Tab</span><span class="p">,</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">Key_Up</span><span class="p">,</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">Key_Down</span><span class="p">):</span>
                 <span class="k">return</span> <span class="kc">False</span>
-            <span class="k">if</span> <span class="n">evt</span><span class="o">.</span><span class="n">key</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">Key_Up</span><span class="p">:</span> <span class="k">pass</span>
-            <span class="k">elif</span> <span class="n">evt</span><span class="o">.</span><span class="n">key</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">Key_Down</span><span class="p">:</span> <span class="k">pass</span>
-            <span class="k">elif</span> <span class="n">evt</span><span class="o">.</span><span class="n">key</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">Key_Left</span><span class="p">:</span>
+
+            <span class="k">if</span> <span class="n">evt</span><span class="o">.</span><span class="n">key</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">Key_Left</span><span class="p">:</span>
                 <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_selectionFrom</span> <span class="o">&lt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">_selectionTo</span><span class="p">:</span>
                     <span class="bp">self</span><span class="o">.</span><span class="n">_cursorPos</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_selectionTo</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_cursorPos</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_text</span><span class="o">.</span><span class="n">prevPos</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_cursorPos</span><span class="p">)</span>
