--- a/info/installing.html
+++ b/info/installing.html
@@ -234,6 +234,11 @@ python3 demo/showcase/splitter.py
 python3 demo/showcase/windowsflags.py
 <span class="c1"># Demo - Tooltip</span>
 python3 tests/test.ui.026.toolTip.py
+
+<span class="c1"># Text edit with &quot;Pygments&quot; highlight integrated</span>
+<span class="c1"># it require pygments</span>
+<span class="c1">#   pip install pygments</span>
+python3 tests/test.ui.018.TextEdit.Pygments.py README.md
 </pre></div>
 </div>
 </section>
