--- a/info/features/index.html
+++ b/info/features/index.html
@@ -130,6 +130,7 @@
 <li><p>Drawing primitives</p></li>
 <li><p>True color support</p></li>
 <li><p>Ful/Half/Zero sized Unicode characters 😎</p></li>
+<li><p>Image rasteriser</p></li>
 </ul>
 </section>
 <section id="alpha-features">
