--- a/genindex.html
+++ b/genindex.html
@@ -3492,6 +3492,8 @@
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkTerminal.terminal_screen_CSI.html#module-TermTk.TTkWidgets.TTkTerminal.terminal_screen_CSI">TermTk.TTkWidgets.TTkTerminal.terminal_screen_CSI</a>
 </li>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkTerminal.terminalhelper.html#module-TermTk.TTkWidgets.TTkTerminal.terminalhelper">TermTk.TTkWidgets.TTkTerminal.terminalhelper</a>
+</li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkTerminal.terminalview.html#module-TermTk.TTkWidgets.TTkTerminal.terminalview">TermTk.TTkWidgets.TTkTerminal.terminalview</a>
 </li>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkTerminal.terminalview_CSI_DEC.html#module-TermTk.TTkWidgets.TTkTerminal.terminalview_CSI_DEC">TermTk.TTkWidgets.TTkTerminal.terminalview_CSI_DEC</a>
@@ -7993,8 +7995,6 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.resizableframe.html#module-TermTk.TTkWidgets.resizableframe">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     TermTk.TTkWidgets.scrollarea
 
@@ -8002,6 +8002,8 @@
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.scrollarea.html#module-TermTk.TTkWidgets.scrollarea">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     TermTk.TTkWidgets.scrollbar
 
@@ -8182,6 +8184,13 @@
 
       <ul>
         <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkTerminal.terminal_screen_CSI.html#module-TermTk.TTkWidgets.TTkTerminal.terminal_screen_CSI">module</a>
+</li>
+      </ul></li>
+      <li>
+    TermTk.TTkWidgets.TTkTerminal.terminalhelper
+
+      <ul>
+        <li><a href="autogen.TermTk/TermTk.TTkWidgets.TTkTerminal.terminalhelper.html#module-TermTk.TTkWidgets.TTkTerminal.terminalhelper">module</a>
 </li>
       </ul></li>
       <li>
