--- a/_modules/TermTk/TTkWidgets/TTkTerminal/terminal.html
+++ b/_modules/TermTk/TTkWidgets/TTkTerminal/terminal.html
@@ -144,9 +144,10 @@
 <span class="sd">    &#39;&#39;&#39;</span>
     <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;_terminalView&#39;</span><span class="p">,</span>
                  <span class="c1"># Exported methods</span>
-                 <span class="s1">&#39;runShell&#39;</span><span class="p">,</span>
+                 <span class="s1">&#39;termWrite&#39;</span><span class="p">,</span>
                  <span class="c1"># Exported Signals</span>
-                 <span class="s1">&#39;titleChanged&#39;</span><span class="p">,</span> <span class="s1">&#39;bell&#39;</span><span class="p">,</span> <span class="s1">&#39;terminalClosed&#39;</span><span class="p">,</span> <span class="s1">&#39;textSelected&#39;</span><span class="p">)</span>
+                 <span class="s1">&#39;titleChanged&#39;</span><span class="p">,</span> <span class="s1">&#39;bell&#39;</span><span class="p">,</span> <span class="s1">&#39;terminalClosed&#39;</span><span class="p">,</span> <span class="s1">&#39;textSelected&#39;</span><span class="p">,</span>
+                 <span class="s1">&#39;termData&#39;</span><span class="p">,</span> <span class="s1">&#39;termResized&#39;</span><span class="p">)</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="n">TTkAbstractScrollArea</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
         <span class="k">if</span> <span class="s1">&#39;parent&#39;</span> <span class="ow">in</span> <span class="n">kwargs</span><span class="p">:</span> <span class="n">kwargs</span><span class="o">.</span><span class="n">pop</span><span class="p">(</span><span class="s1">&#39;parent&#39;</span><span class="p">)</span>
@@ -155,12 +156,15 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">setViewport</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="p">)</span>
 
         <span class="c1"># Export Methods</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">runShell</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="o">.</span><span class="n">runShell</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">termWrite</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="o">.</span><span class="n">termWrite</span>
 
         <span class="c1"># Export Signals</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">bell</span>         <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="o">.</span><span class="n">bell</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">termData</span>     <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="o">.</span><span class="n">termData</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">termResized</span>  <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="o">.</span><span class="n">termResized</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">titleChanged</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="o">.</span><span class="n">titleChanged</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">bell</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="o">.</span><span class="n">bell</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">textSelected</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="o">.</span><span class="n">textSelected</span>
+
         <span class="bp">self</span><span class="o">.</span><span class="n">terminalClosed</span> <span class="o">=</span> <span class="n">pyTTkSignal</span><span class="p">(</span><span class="n">TTkTerminal</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_terminalView</span><span class="o">.</span><span class="n">terminalClosed</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="k">lambda</span> <span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">terminalClosed</span><span class="o">.</span><span class="n">emit</span><span class="p">(</span><span class="bp">self</span><span class="p">))</span>
 
