--- a/tests/sandbox/standalone.html
+++ b/tests/sandbox/standalone.html
@@ -8,7 +8,9 @@
 
     <link  href="www/xterm/xterm.css" rel="stylesheet" />
     <script src="www/xterm/xterm.js"></script>
-    <script src="www/xterm-addon-fit/xterm-addon-fit.js"></script>
+    <!--
+      <script src="www/xterm-addon-fit/xterm-addon-fit.js"></script>
+    -->
     <script src="www/xterm-addon-unicode11/xterm-addon-unicode11.js"></script>
 
     <link href="www/fontawesome/fontawesome.min.css" rel="stylesheet">
@@ -26,12 +28,12 @@
     <script type="text/javascript">
       /* xterm.js demo */
       /* https://www.npmjs.com/package/xterm-addon-fit */
-      const fitAddon = new FitAddon.FitAddon();
+      // const fitAddon = new FitAddon.FitAddon();
       /* https://www.npmjs.com/package/xterm-addon-unicode11 */
       const unicode11Addon = new Unicode11Addon.Unicode11Addon();
 
       var term = new Terminal({allowProposedApi: true});
-      term.loadAddon(fitAddon);
+      // term.loadAddon(fitAddon);
       term.loadAddon(unicode11Addon);
 
       term.unicode.activeVersion = '11';
@@ -40,7 +42,7 @@
 
       term.write('xterm.js - Loaded\n\r')
 
-      fitAddon.fit()
+      // fitAddon.fit()
 
       /* pyodide demo */
       async function main(){
@@ -53,14 +55,11 @@
         await ttkProxy.loadLib("bin/demo.tgz");
         term.write('Demos - Loaded\n\r')
 
-        await ttkProxy.loadLib("bin/tutorial.tgz");
-        term.write('Tutorials - Loaded\n\r')
-
         term.write('Starting Demo...\n\r')
 
         ttkProxy.preRun()
 
-        let file = ttkProxy.currentPath()+"/demo/demo.py"
+        let file = "demo/demo.py"
         let content = ttkProxy.readFile(file)
 
         ttkProxy.run(content, file, 60)
