--- a/tests/sandbox/standalone.fullscreen.html
+++ b/tests/sandbox/standalone.fullscreen.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <script src="www/pyodide/pyodide.js"></script>
     <!--
       <script src="https://ceccopierangiolieugenio.github.io/binaryRepo/pyTermTk/www/pyodide/pyodide.js"></script>
@@ -22,7 +23,7 @@
     <div id="terminal" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px"></div>
 
     <script type="text/javascript">
-      /* xterm.js demo */
+      /* xterm.js */
       /* https://www.npmjs.com/package/xterm-addon-fit */
       const fitAddon = new FitAddon.FitAddon();
       /* https://www.npmjs.com/package/xterm-addon-unicode11 */
@@ -36,9 +37,11 @@
 
       term.open(document.getElementById('terminal'));
 
-      term.write('xterm.js - Loaded\n\r')
+      // start observing the terminal for resize
+      const resize_ob = new ResizeObserver(function(entries) {fitAddon.fit();});
+      resize_ob.observe(document.querySelector("#terminal"));
 
-      fitAddon.fit()
+      term.write('xterm.js - Loaded\n\r')
 
       /* pyodide demo */
       async function main(){
@@ -59,6 +62,7 @@
         let content = ttkProxy.readFile(file)
 
         ttkProxy.run(content, file, 60)
+        fitAddon.fit()
       }
       main()
     </script>
